--- a/receiver.css
+++ b/receiver.css
@@ -5,6 +5,8 @@ cast-media-player {
   --progress-color: rgba(255, 255, 255, 0.7);
   --splash-size: cover;
   --background-image: linear-gradient(rgba(115, 119, 217, 1), rgba(181, 101, 202, 1));
+  --pause-image: url('img/pause_btn.png'):
+  --play-image: url('img/play_btn.png')
 }
 
 .player {
