--- a/receiver.css
+++ b/receiver.css
@@ -4,9 +4,12 @@ cast-media-player {
   --theme-hue: 100;
   --progress-color: rgba(255, 255, 255, 0.7);
   --splash-size: cover;
+  --background: linear-gradient(rgba(115, 119, 217, 1), rgba(181, 101, 202, 1));
   --background-image: linear-gradient(rgba(115, 119, 217, 1), rgba(181, 101, 202, 1));
   --pause-image: url('img/pause_btn.png');
   --play-image: url('img/play_btn.png');
+  --splash-image: url('img/logo.png');
+  --logo-image: url('img/logo.png');
 }
 
 .player {
