--- a/receiver.css
+++ b/receiver.css
@@ -6,8 +6,8 @@ cast-media-player {
   --splash-size: cover;
   --background: linear-gradient(rgba(115, 119, 217, 1), rgba(181, 101, 202, 1));
   --background-image: linear-gradient(rgba(115, 119, 217, 1), rgba(181, 101, 202, 1));
-  --pause-image: url('img/pause_btn.png');
-  --play-image: url('img/play_btn.png');
+  --pause-image: url('img/play_btn.png');
+  --play-image: url('img/pause_btn.png');
   --splash-image: url('img/logo.png');
   --logo-image: url('img/logo.png');
 }
